--- a/change-password.html
+++ b/change-password.html
@@ -101,4 +101,70 @@
         <button onclick="changePassword()">Cập nhật mật khẩu</button>
         <p id="message"></p>
         <a href="dashboard.html" class="back-link">Quay lại trang chính</a>
-    </div
+    </div>
+
+    <script>
+        const token = localStorage.getItem('token');
+
+        async function changePassword() {
+    const currentPassword = document.getElementById('currentPassword').value;
+    const newPassword = document.getElementById('newPassword').value;
+    const confirmPassword = document.getElementById('confirmPassword').value;
+    const message = document.getElementById('message');
+
+    // Kiểm tra input
+    if (!currentPassword || !newPassword || !confirmPassword) {
+        message.innerText = 'Vui lòng điền đầy đủ thông tin!';
+        return;
+    }
+
+    if (newPassword !== confirmPassword) {
+        message.innerText = 'Mật khẩu mới và xác nhận không khớp!';
+        return;
+    }
+
+    if (!token) {
+        message.innerText = 'Không tìm thấy token. Vui lòng đăng nhập lại!';
+        return;
+    }
+
+    const data = {
+        oldPassword: currentPassword,
+        newPassword: newPassword
+    };
+
+    try {
+        const response = await fetch('http://localhost:8081/auth/user', {
+            method: 'POST',
+            headers: {
+                'Authorization': `Bearer ${token}`,
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(data)
+        });
+
+        const result = await response.json();
+
+        if (!response.ok) {
+            if (result.code === 1011) {
+                throw new Error('Mật khẩu mới không được trùng với mật khẩu cũ!');
+            }
+            throw new Error(result.message || 'Đã xảy ra lỗi khi đổi mật khẩu');
+        }
+
+        message.style.color = '#4CAF50';
+        message.innerText = 'Đổi mật khẩu thành công!';
+        setTimeout(() => {
+            window.location.href = 'dashboard.html';
+        }, 1500);
+    } catch (error) {
+        console.error('Lỗi khi đổi mật khẩu:', error.message);
+        message.style.color = '#e53935';
+        message.innerText = error.message;
+    }
+}
+
+    </script>
+</body>
+
+</html>
