--- a/user-profile.html
+++ b/user-profile.html
@@ -156,7 +156,7 @@
         <div class="profile-info" id="profileInfo">
             <!-- Thông tin cá nhân sẽ được thêm bằng JavaScript -->
         </div>
-        <a href="user-home.html" class="back-link">Quay lại trang chủ</a>
+        <a href="user.html" class="back-link">Quay lại trang chủ</a>
     </div>
 
     <!-- Modal đổi mật khẩu -->
